--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-        <script src="./script.js"></script>
+        <script defer src="./script.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet" />
@@ -80,219 +80,66 @@
                         </button>
                     </div>
                 </nav>
-                <div class="row gap-4">
-                    <div class="row justify-content-around">
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="row gap-4 justify-content-center" id="gridCards"></div>
+            </div>
+
+            <nav aria-label="Пример навигации по страницам" class="justify-content-center d-grid" id="pagin">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Предыдущая">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Следующая">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+            <footer style="margin-top: 80px; padding: 40px 40px 0 40px">
+                <div class="row-10 justify-content-between d-flex">
+                    <div class="col-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="row"><b>NFT</b></li>
+                            <li class="row">Что такое NFT</li>
+                            <li class="row">Создайте NFT с нами</li>
+                        </ul>
                     </div>
-                    <div class="row justify-content-around">
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card rounded-0 gap-2" style="width: 18rem">
-                                <img src="./img/фотка.png" class="card-img-top" alt="..." />
-                                <div class="card-body p-0 d-grid gap-2">
-                                    <b class="row m-0 p-0 h5">Без слов</b>
-                                    <div class="card border-0">
-                                        <div class="row g-0">
-                                            <div class="col-4">
-                                                <img src="./img/маленькая фотка звезды.png" class="img-fluid" id="small_img" alt="..." />
-                                            </div>
-                                            <div class="col">
-                                                <div class="card-body p-0 m-0">
-                                                    <h6 class="card-title">Настя Ивлеева Вячеславовна</h6>
-                                                    <h6 class="card-text text-warning">
-                                                        <small>проверено <i class="bi bi-patch-check-fill"></i></small>
-                                                    </h6>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Редкость:</div>
-                                        <div class="col-auto border border-warning border-2 rounded-3">уникальная</div>
-                                    </div>
-                                    <div class="row gap-5 justify-content-between">
-                                        <div class="col-auto">Цена:</div>
-                                        <div class="col-auto rounded-3 align-self-end" id="price">от 500 руб.</div>
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <button class="col-10 border-0 rounded-5" id="buyBtn">Купить</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="row"><b>Компания</b></li>
+                            <li class="row">О нас</li>
+                            <li class="row">Отправить запрос</li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul class="list-group list-group-flush">
+                            <li class="row"><b>Другое</b></li>
+                            <li class="row">Условия использования</li>
+                            <li class="row">Политика конфиденциальности</li>
+                        </ul>
                     </div>
                 </div>
-            </div>
+                <div class="row-2" id="socials">
+                    <img src="./img/twitter-3 1.png" alt="" />
+                    <img src="./img/image 3.png" alt="" />
+                </div>
+                <div class="justify-content-center d-flex">
+                    <img src="./img/Vector 2 1.png" alt="">
+                </div>
+                <div class="justify-content-center d-flex">
+                    <p id="footer_company">@ tnft.ru Company, Inc</p>
+                </div>
+            </footer>
         </section>
+
         <section id="thirdTask"></section>
-        <footer></footer>
     </body>
 </html>
